--- a/css/style.css
+++ b/css/style.css
@@ -53,8 +53,6 @@ section{
    margin-bottom: 2.5rem;
    font-size: 4rem;
    color:var(--black);
-   text-transform: uppercase;
-   text-decoration: underline;
    text-underline-offset: 1rem;
 }
 
@@ -64,13 +62,13 @@ section{
    justify-content: center;
    gap:1rem;
    flex-flow: column;
-   background-color: var(--black);
+   background-color: white;
    min-height: 20rem;
 }
    
 .heading h3{
    font-size: 5rem;
-   color:var(--white);
+   color:black;
    text-transform: capitalize;
 }
 
@@ -332,25 +330,26 @@ section{
 }
 
 .products .box-container{
-   display: grid;
-   grid-template-columns: repeat(auto-fit, 33rem);
+   display: flex;
+   flex-wrap:wrap;
    justify-content: center;
-   align-items: flex-start;
-   gap:1.5rem;
+   gap:2rem;
 }
 
 .products .box-container .box{
-   border:var(--border);
-   padding:1.5rem;
-   position: relative;
-   overflow: hidden;
+    flex:1 1 42rem;
+    padding:2rem;
+    border:var(--border);
+    border-radius: var(--border-radius);
+    display: flex;
+    align-items: center;
+    gap:1.5rem;
+    margin-left: 6rem;
 }
 
 .products .box-container .box img{
-   height: 25rem;
-   width: 100%;
-   object-fit: contain;
-   margin-bottom: 1rem;
+   height: 8rem;
+   margin-left: -6rem;
 }
 
 .products .box-container .box .fa-eye,
@@ -402,8 +401,9 @@ section{
 }
 
 .products .box-container .box .name{
-   font-size: 2rem;
+   font-size: 2.2rem;
    color:var(--black);
+    line-height: 1.8;
    margin:1rem 0;
 }
 
