--- a/css/style.css
+++ b/css/style.css
@@ -215,7 +215,7 @@ section{
    font-size: 2rem;
 }
 
-#menu-btn{
+menu-btn{
    display: none;
 }
 
@@ -338,26 +338,25 @@ section{
 }
 
 .products .box-container{
-   display: flex;
-   flex-wrap:wrap;
+   display: grid;
+   grid-template-columns: repeat(auto-fit, 33rem);
    justify-content: center;
-   gap:2rem;
+   align-items: flex-start;
+   gap:1.5rem;
 }
 
 .products .box-container .box{
-    flex:1 1 42rem;
-    padding:2rem;
-    border:var(--border);
-    border-radius: var(--border-radius);
-    display: flex;
-    align-items: center;
-    gap:1.5rem;
-    margin-left: 6rem;
+   border:var(--border);
+   padding:1.5rem;
+   position: relative;
+   overflow: hidden;
 }
 
 .products .box-container .box img{
-   height: 8rem;
-   margin-left: -6rem;
+   height: 25rem;
+   width: 100%;
+   object-fit: contain;
+   margin-bottom: 1rem;
 }
 
 .products .box-container .box .fa-eye,
@@ -409,9 +408,8 @@ section{
 }
 
 .products .box-container .box .name{
-   font-size: 2.2rem;
+   font-size: 2rem;
    color:var(--black);
-    line-height: 1.8;
    margin:1rem 0;
 }
 
@@ -511,6 +509,14 @@ section{
 .products .cart-total .btn{
    margin-top: 0;
 }
+
+.about .row{
+   display: flex;
+   align-items: center;
+   flex-wrap: wrap;
+   gap:1.5rem;
+}
+
 
 .about .row{
    display: flex;
@@ -941,10 +947,21 @@ section{
 
 
 
+.footer{
+    padding:3rem 2rem;
+   text-align: center;
+   background-color: var(--black);
+   color:var(--white);
+   font-size: 2rem;
+   text-transform: capitalize;
+    
+}
+
+
 .footer .grid{
+   padding:3rem 2rem;
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(27rem, 1fr));
-   gap:1.5rem;
    align-items: flex-start;
 }
 
@@ -968,7 +985,12 @@ section{
    text-transform: capitalize;
 }
 
-.footer .grid .box p,
+.footer .grid .box p{
+   display: block;
+   font-size: 1.7rem;
+   color:var(--light-color);
+   line-height: 1.8; 
+}
 .footer .grid .box a{
    display: block;
    font-size: 1.7rem;
@@ -979,7 +1001,14 @@ section{
 .footer .grid .box a:hover{
    text-decoration: underline;
 }
-
+.update{
+   padding:3rem 2rem;
+   text-align: center;
+   background-color: var(--black);
+   color:var(--white);
+   font-size: 2rem;
+   text-transform: capitalize;
+}
 .credit{
    padding:3rem 2rem;
    text-align: center;
